<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchview_manage"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:background="@drawable/super_rounded_rectangle"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:paddingVertical="5dp"
        app:iconifiedByDefault="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.appcompat.widget.SearchView>

    <ImageButton
        style="@style/filter"
        android:id="@+id/button_filter_manage"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="18dp"
        android:layout_marginStart="10dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/filter"
        android:scaleType="fitXY"
        app:layout_constraintStart_toEndOf="@id/searchview_manage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_manage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="Manage Book"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/searchview_manage" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title_manage"
        android:paddingBottom="110dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview_manage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/manage_item"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_manage" />
        </LinearLayout>
    </ScrollView>
    <ScrollView
        android:id="@+id/filters_container_manage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle_filter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.9">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_filter_menu_manage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="@string/filter_title"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="?attr/colorOnSurface"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title_type_filter_manage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/typeFilterTitle"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="?attr/colorOnSurface"
                app:layout_constraintStart_toStartOf="@id/title_filter_menu_manage"
                app:layout_constraintTop_toBottomOf="@id/title_filter_menu_manage" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_select_filter_type_science_manage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/white"
                android:text="@string/science"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/title_type_filter_manage"
                app:layout_constraintTop_toBottomOf="@id/title_type_filter_manage" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_select_filter_type_romance_manage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/white"
                android:text="@string/romance"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/button_select_filter_type_science_manage"
                app:layout_constraintTop_toTopOf="@id/button_select_filter_type_science_manage" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_select_filter_type_mystery_manage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/white"
                android:text="@string/mystery"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/title_type_filter_manage"
                app:layout_constraintTop_toBottomOf="@id/button_select_filter_type_science_manage" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_select_filter_type_horror_manage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/white"
                android:text="@string/horror"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/button_select_filter_type_romance_manage"
                app:layout_constraintTop_toBottomOf="@id/button_select_filter_type_romance_manage" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_select_filter_type_shortstories_manage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/white"
                android:text="@string/shortstories"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/button_select_filter_type_romance_manage"
                app:layout_constraintTop_toBottomOf="@id/button_select_filter_type_horror_manage" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_select_filter_type_cookbooks_manage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/white"
                android:text="@string/cookbooks"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/title_type_filter_manage"
                app:layout_constraintTop_toBottomOf="@id/button_select_filter_type_mystery_manage" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_select_filter_type_essay_manage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/white"
                android:text="@string/essay"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/title_type_filter_manage"
                app:layout_constraintTop_toBottomOf="@id/button_select_filter_type_cookbooks_manage" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_select_filter_type_history_manage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/white"
                android:text="@string/history"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/button_select_filter_type_romance_manage"
                app:layout_constraintTop_toBottomOf="@id/button_select_filter_type_shortstories_manage" />

            <TextView
                android:id="@+id/title_price_filter_manage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/priceFilterTitle"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="?attr/colorOnSurface"
                app:layout_constraintStart_toStartOf="@id/title_filter_menu_manage"
                app:layout_constraintTop_toBottomOf="@id/button_select_filter_type_essay_manage" />

            <EditText
                android:id="@+id/edittextMinimumPrice_manage"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_white_rectangle"
                android:hint="@string/minimumPrice"
                android:importantForAutofill="no"
                android:inputType="number"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:textColor="@color/gray"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/title_price_filter_manage"
                app:layout_constraintTop_toBottomOf="@id/title_price_filter_manage" />

            <EditText
                android:id="@+id/edittextMaximumPrice_manage"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_white_rectangle"
                android:hint="@string/maximumPrice"
                android:importantForAutofill="no"
                android:inputType="number"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:textColor="@color/gray"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/edittextMinimumPrice_manage"
                app:layout_constraintTop_toBottomOf="@id/title_price_filter_manage" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_filter_confirm_manage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="#28A745"
                android:text="@string/confirm"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/edittextMaximumPrice_manage"
                app:layout_constraintTop_toBottomOf="@id/edittextMinimumPrice_manage" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_filter_reset_manage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:backgroundTint="#dc3545"
                android:text="@string/reset"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@id/button_filter_confirm_manage"
                app:layout_constraintTop_toTopOf="@id/button_filter_confirm_manage" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>